docs(readme): document FFI bindings per language + Java 25 rationale